Tue Jun 15 16:01:34 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_argument/arglist.cpp:
        
          Removed generation of extra leading double colon.

Tue Jun 15 15:24:25 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/Bug_3821_Regression/Bug_3821_Regression.mpc:
          Disabled generation of skeleton files as the test only needs stubs.

        * TAO_IDL/be/be_union_branch.cpp:
        * TAO_IDL/be/be_visitor_union/union_cs.cpp:
          Changed generation of constructor for IDL unions. Now constructor
          sets disc_ member directly without a call to _default(). The later
          was problematic because before setting disc_ _default() called
          _reset() which used disc_ in switch statement.

Tue Jun 15 14:14:36 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_argument/argument.cpp(type_name):

          Restored generation of a leading double colon that was lost
          in the recent merge of the alt_mapping branch.

Tue Jun 15 14:02:32 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/AnyTypeCode/Any.cpp:

          Removed id of unused parameters.

Mon Jun 14 18:48:29 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Basic_Arguments.h:
        * tao/PortableServer/Basic_SArguments.h:

          Updated syntax of TAO::Any_Insert_Policy_Stream template
          parameter, which had changed since the alt_mapping
          branch was created.

Mon Jun 14 18:34:19 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_global.cpp:

          Added member alt_mapping_ initialization in the constructor.

Mon Jun 14 18:29:53 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_arg_traits.cpp:

          Removed unused variable.

        * TAO_IDL/be/be_codegen.cpp:

          Added newline to #include generation.
