@@ -1,3 +1,15 @@
+Tue Jun 15 17:19:46 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * Vector_Argument_T.inl:
+        * Vector_Argument_T.h:
+        * Vector_Argument_T.cpp:
+        * AnyTypeCode_Adapter.h:
+        * AnyTypeCode/AnyTypeCode_Adapter_Impl.h:
+        * AnyTypeCode/AnyTypeCode_Adapter_Impl.cpp:
+        
+          Branch merge issues related to the Any insert policy
+          used by interceptors.
+
 Tue Jun 15 16:01:34 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/be/be_visitor_argument/arglist.cpp:
